[#noissue] Replace XML in GRPC with java config