@@ -37,7 +37,6 @@ import io.grpc.ServerServiceDefinition;
 import org.springframework.beans.factory.FactoryBean;
 
 import java.net.InetAddress;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Executor;
 import java.util.concurrent.ExecutorService;
@@ -74,7 +73,7 @@ public class SpanServerTestMain {
 
         Executor executor = newWorkerExecutor(8);
         ServerServiceDefinition bindableService = newSpanBindableService(executor);
-        grpcReceiver.setBindableServiceList(Collections.singletonList(bindableService));
+        grpcReceiver.setBindableServiceList(List.of(bindableService));
         grpcReceiver.setAddressFilter(new MockAddressFilter());
         grpcReceiver.setExecutor(Executors.newFixedThreadPool(8));
         grpcReceiver.setEnable(true);
